# pytorch-assignment

./: CMakeLists.txt  README.md
inc/: kernels.h
src/: fmod.cpp  linspace.cpp
